# DupCleaner

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  macos-errors.md  test_fuzz.cpp  ubuntu-errors.md  windows-errors.md
.github/workflows/: ci.yml  release.yml
build_asan/tests/: dupcleaner_cli_integration[1]_include.cmake  dupcleaner_tests[1]_include.cmake  dupcleaner_tests[1]_tests.cmake
build_fuzz/tests/: dupcleaner_cli_integration[1]_include.cmake  dupcleaner_tests  dupcleaner_tests[1]_include.cmake  dupcleaner_tests[1]_tests.cmake  fuzz_file_hasher  fuzz_image_loader
docs/: architecture.md  hardening-log.md
include/dupcleaner/: exceptions.h  file_entry.h
src/cli/: CMakeLists.txt  cli_app.h  debug_cli.cpp  interactive_review.cpp  interactive_review.h  main.cpp
src/core/: CMakeLists.txt  deleter.cpp  deleter.h  duplicate_finder.cpp  duplicate_finder.h  hasher.cpp  hasher.h  image_loader.cpp  image_loader.h  perceptual_hash.cpp  perceptual_hash.h  scanner.cpp  scanner.h  thread_pool.cpp  thread_pool.h
src/gui/: CMakeLists.txt  app.cpp  app.h  formatting.cpp  formatting.h  main.cpp  selection_logic.cpp  selection_logic.h  thumbnail_cache.cpp  thumbnail_cache.h  thumbnail_logic.cpp  thumbnail_logic.h
tests/: CMakeLists.txt  perf_scan_benchmark.cpp  test_cli_args.cpp  test_cli_integration.cpp  test_deleter.cpp  test_duplicate_finder.cpp  test_file_entry.cpp  test_gui_formatting.cpp  test_gui_selection_logic.cpp  test_gui_thumbnail_logic.cpp  test_hasher.cpp  test_image_loader.cpp  test_interactive_review.cpp  test_perceptual_hash.cpp  test_placeholder.cpp  test_scanner.cpp  test_thread_pool.cpp
tests/fuzz/: fuzz_file_hasher.cpp  fuzz_image_loader.cpp
tools/: CMakeLists.txt  gen_test_tree.cpp  gen_test_tree.h
